@@ -19,6 +19,7 @@ systemd System and Service Manager
  	- remove “bus_kernel_read_message” function;
  	- remove “bus_kernel_create_domain” function;
  	- remove “bus_event_loop_with_idle” function;
+ 	- remove “sd_bus_try_close” function;
  * loginctl:
  	- remove “machine” argument option;
  * systemd-analyze:
